Added zoom feature.

--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,5 +1,5 @@
 <figure>
-        <img src="{{ .Get "src" }}" width="{{ .Get "width" }}" />
+        <img data-action="zoom" src="{{ .Get "src" }}" width="{{ .Get "width" }}" />
         <figcaption>
             {{ .Get "title" }}
         </figcaption>
