--- a/themes/monaca/layouts/partials/original/head.html
+++ b/themes/monaca/layouts/partials/original/head.html
@@ -10,6 +10,12 @@
 <link href="{{"css/font-awesome.min.css" | relURL}}" rel="stylesheet">
 <link href="{{"theme-original/style.css" | relURL}}" rel="stylesheet">
 <link rel="stylesheet" href="{{"css/bootstrap.min.css" | relURL}}">
+
+<link href="{{"css/zoom.css" | relURL}}" rel="stylesheet">
+<script src="{{"js/jquery-3.3.1.min.js" | relURL}}"></script>
+<script src="{{"js/zoom.js" | relURL}}"></script>
+<script src="{{"js/transition.js" | relURL}}"></script>
+
 <style type="text/css">
   :root #header + #content > #left > #rlblock_left {
     display:none !important;
