Update for PWA(#753)

--- a/themes/monaca/layouts/partials/original/head.html
+++ b/themes/monaca/layouts/partials/original/head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="theme-color" content="#0054ac"/>
 {{ .Hugo.Generator }}
 
 <title>{{ .Title }} :: {{ .Site.Title }}</title>
@@ -10,11 +11,26 @@
 <link href="{{"css/font-awesome.min.css" | relURL}}" rel="stylesheet">
 <link href="{{"theme-original/style.css" | relURL}}" rel="stylesheet">
 <link rel="stylesheet" href="{{"css/bootstrap.min.css" | relURL}}">
+<link rel="manifest" href="{{"manifest.json" | relURL}}">
 
 <!-- <link href="{{"css/zoom.css" | relURL}}" rel="stylesheet">
 <script src="{{"js/jquery-3.3.1.min.js" | relURL}}"></script>
 <script src="{{"js/zoom.js" | relURL}}"></script>
 <script src="{{"js/transition.js" | relURL}}"></script> -->
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('/sw.js').then(function(registration) {
+        // Registration was successful
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }, function(err) {
+        // registration failed :(
+        console.log('ServiceWorker registration failed: ', err);
+      });
+    });
+  }
+</script>
 
 <style type="text/css">
   :root #header + #content > #left > #rlblock_left {
