--- a/themes/monaca/layouts/partials/language-selector.html
+++ b/themes/monaca/layouts/partials/language-selector.html
@@ -1,5 +1,5 @@
 {{- if and .Site.IsMultiLingual (not .Site.Params.DisableLanguageSwitchingButton)}}
-<select id="select-language" onchange="location = this.value;">
+<select aria-label="select language" id="select-language" onchange="location = this.value;">
 	{{ $siteLanguages := .Site.Languages}}
 	{{ $pageLang := .Page.Lang}}
 	{{ range .Page.AllTranslations }}
