--- a/themes/monaca/layouts/partials/original/head.html
+++ b/themes/monaca/layouts/partials/original/head.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="theme-color" content="#0054ac"/>
+<meta name="Description" content="Monaca documentation">
 {{ .Hugo.Generator }}
 
 <title>{{ .Title }} :: {{ .Site.Title }}</title>
